feat: remove legacy files

--- a/packages/docs/src/content/docs/guides/introduction.mdx
+++ b/packages/docs/src/content/docs/guides/introduction.mdx
@@ -60,4 +60,4 @@ Univer 同时提供商业授权（企业版），包括以下内容：
 -   商务电话 +(86) 186 0163 9309
 -   添加企业微信
 
-<img width="300" src="/img/business-qr-code.jpg" />
+![](@/assets/img/business-qr-code.jpg)
