docs: add quick start docs

--- a/packages/docs/src/content/docs/guides/quick-start/index.mdx
+++ b/packages/docs/src/content/docs/guides/quick-start/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 快速上手
+title: 安装和引入
 ---
 
 我们推荐使用 [Vite](https://vitejs.dev/)、[esbuild](https://esbuild.github.io/) 或 [Webpack 5](https://webpack.js.org/) 等对 ES Module 支持较好的构建工具来构建 Univer 应用。如果你使用了其它构建工具（例如 Webpack 4），可能会需要一些额外的配置。请阅读 [FAQ](/guides/faq) 获取更多信息。
