fix: fix the link of "concat us"

--- a/src/content/docs/enterprises/index.mdx
+++ b/src/content/docs/enterprises/index.mdx
@@ -3,7 +3,7 @@ title: 商业版介绍
 ---
 
 import { Image } from 'astro:assets'
-import QrCodeImg from '@/assets/img/business-qr-code.jpg'
+import QrCodeImg from '@/assets/img/business-qr-code.png'
 
 ## 商业版功能
 
