docs: fix links in introduction and add English version

--- a/src/content/docs/enterprises/index.mdx
+++ b/src/content/docs/enterprises/index.mdx
@@ -2,8 +2,8 @@
 title: 商业版介绍
 ---
 
-import { Image } from 'astro:assets'
-import QrCodeImg from '@/assets/img/business-qr-code.png'
+import { Image } from "astro:assets";
+import QrCodeImg from "@/assets/img/business-qr-code.png";
 
 ## 商业版功能
 
@@ -27,8 +27,8 @@ import QrCodeImg from '@/assets/img/business-qr-code.png'
 
 如果你需要商业授权，可以通过以下方式咨询：
 
--   发送 “我要试用” 到我们的 [开发者邮箱 developer@univer.ai](mailto:developer@univer.ai)
--   商务电话 +(86) 186 0163 9309
--   添加企业微信
+- 发送 “我要试用” 到我们的 [开发者邮箱 developer@univer.ai](mailto:developer@univer.ai)
+- 商务电话 +(86) 186 0163 9309
+- 添加企业微信
 
-<Image src={QrCodeImg} width={300} alt="qr code" />
+<Image src={QrCodeImg} width={300} alt="DreamNum QR Code" />
