--- a/src/content/docs/en-us/guides/quick-start/extend.mdx
+++ b/src/content/docs/en-us/guides/quick-start/extend.mdx
@@ -1,13 +1,13 @@
 ---
-title: 扩展 Univer
+title: Extend Univer
 ---
 
-Univer 自带的功能可能无法满足你的需求，你可以通过拓展 Univer 来实现你的业务逻辑。你可以扩展 Univer 的：
+Univer's built-in functionalities may not meet your specific needs, but you can extend Univer to implement your business logic. You can extend Univer in the following areas:
 
-* [命令系统](/guides/extend/command)，包括：自定义命令，在其他命令发生时补充 mutations，扩展复制粘贴、下拉填充等；
-* [公式系统](/guides/plugins/sheets/sheets-formula)，包括实现自定义公式
-* [UI](/guides/extend/ui)，包括自定义菜单、工具栏、对话框等
+* [Command System](/guides/extend/command): This includes custom commands, supplementing mutations with other commands, and extending features like copy-paste and fill-down.
+* [Formula System](/guides/plugins/sheets/sheets-formula): This involves implementing custom formulas.
+* [UI](/guides/extend/ui): This includes custom menus, toolbars, dialogues, and more.
 
-我们建议将对 Univer 的扩展，连同你的业务代码封装在一个 Univer 插件中。
+We recommend encapsulating your extensions to Univer, along with your business code, within a Univer plugin.
 
-你可以阅读[这里](/guides/extend/write-a-plugin)了解如何编写一个自定义插件。
+You can learn how to write a custom plugin [here](/guides/extend/write-a-plugin).
