--- a/src/content/docs/guides/quick-start/index.mdx
+++ b/src/content/docs/guides/quick-start/index.mdx
@@ -29,17 +29,23 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
     ```
   </TabItem>
 
-{" "}
-
-<TabItem label="yarn">
-  ```shell yarn install @univerjs/core \ @univerjs/design \ @univerjs/docs \
-  @univerjs/engine-formula \ @univerjs/engine-render \ @univerjs/sheets \
-  @univerjs/sheets-formula \ @univerjs/sheets-ui \ @univerjs/ui ```
-</TabItem>
+  <TabItem label="yarn">
+    ```shell
+    yarn add @univerjs/core \
+        @univerjs/design \
+        @univerjs/docs \
+        @univerjs/engine-formula \
+        @univerjs/engine-render \
+        @univerjs/sheets \
+        @univerjs/sheets-formula \
+        @univerjs/sheets-ui \
+        @univerjs/ui
+    ```
+  </TabItem>
 
   <TabItem label="pnpm">
     ```shell
-    pnpm install @univerjs/core \
+    pnpm add @univerjs/core \
         @univerjs/design \
         @univerjs/docs \
         @univerjs/engine-formula \
