feat: move ot blog into the page

--- a/src/content/blog/ot/zh-cn.mdx
+++ b/src/content/blog/ot/zh-cn.mdx
@@ -1,5 +1,15 @@
 ---
 title: OT 算法以及 Univer 的协同编辑设计
+desc: Required
+tags: 
+  - Collaboration
+  - OT
+  - Architecture
+cover: ./0.png
+author: wzhudev
+date: 2024-01-12
+lang: zh-cn
+slug: blog/ot
 ---
 
 > 这篇博客是 Univer 团队内部分享整理而成。在 Univer 我们经常对有趣的技术问题进行分享和讨论，如果你喜欢这篇博客的内容，不妨考虑[加入我们](mailto:huwenzhao@univer.ai)。
