feat: add icon site

--- a/src/content/docs/enterprises/index.mdx
+++ b/src/content/docs/enterprises/index.mdx
@@ -2,7 +2,6 @@
 title: 商业版介绍
 ---
 
-import { Image } from "astro:assets";
 import QrCodeImg from "@/assets/img/business-qr-code.png";
 
 ## 商业版功能
@@ -31,4 +30,4 @@ import QrCodeImg from "@/assets/img/business-qr-code.png";
 - 商务电话 +(86) 186 0163 9309
 - 添加企业微信
 
-<Image src={QrCodeImg} width={300} alt="DreamNum QR Code" />
+<img src={QrCodeImg.src} width={300} alt="DreamNum QR Code" />
