fix: fix styling of blog pages

--- a/src/content/blog/ot/en-us.mdx
+++ b/src/content/blog/ot/en-us.mdx
@@ -1,6 +1,6 @@
 ---
 title: OT 算法以及 Univer 的协同编辑设计
-desc: Required
+desc: Univer 作为一个企业数据协同工具，我们的目标之一是让用户可以在任何地方、任何时间、任何设备上进行协同编辑。在这个过程中，我们遇到了很多有趣的技术问题，其中最有挑战性的问题之一是设计 OT 算法。本文将介绍 OT 算法的基本原理，以及 Univer 协同编辑模块的设计。
 tags: 
   - Collaboration
   - OT
