--- a/src/content/docs/en-us/guides/introduction.mdx
+++ b/src/content/docs/en-us/guides/introduction.mdx
@@ -43,7 +43,7 @@ If you encounter any issues while using Univer, you can seek help in the followi
 
 ## Links
 
-- [Official Website](https://univer.work)
+- [Official Website](https://univer.ai)
 - [GitHub](https://github.com/dream-num/univer)
 
 ## Open Source License
