feat：modify enterprises

--- a/src/content/docs/enterprises/index.mdx
+++ b/src/content/docs/enterprises/index.mdx
@@ -26,7 +26,7 @@ import QrCodeImg from "@/assets/img/business-qr-code.png";
 
 如果你需要商业授权，可以通过以下方式咨询：
 
-- 发送 “我要试用” 到我们的 [开发者邮箱 developer@univer.ai](mailto:developer@univer.ai)
+- [开发者邮箱 developer@univer.ai](mailto:developer@univer.ai)
 - 商务电话 +(86) 186 0163 9309
 - 添加企业微信
 
