fix: Modify format

--- a/src/content/docs/enterprises/trial-version.mdx
+++ b/src/content/docs/enterprises/trial-version.mdx
@@ -16,7 +16,7 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 ## 环境要求
 1. CPU: 1 核
 2. 内存: 2G
-3. 磁盘：10G
+3. 磁盘: 10G
 4. 系统: Linux, Mac, Windows(只支持lite版本部署)
 
 ## 部署
@@ -125,7 +125,9 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 检查防火墙是否启用,若启用请确保局域网内univer的端口可被访问
 
 ### 4. 服务启动失败
-】检查端口是否被占用，若占用请结束其他进程后再尝试启动
+检查端口是否被占用，若占用请结束其他进程后再尝试启动
+
+univer端口见下表
 <Tabs>
     <TabItem label="docker-compose">
         | service | port | description |
