docs: modify url

--- a/src/content/docs/enterprises/trial-version.mdx
+++ b/src/content/docs/enterprises/trial-version.mdx
@@ -48,10 +48,8 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 
 
     <TabItem label="mac-lite">
-        1. 下载二进制文件
-        ```bash
-        https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/darwin.zip
-        ```
+        1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/darwin.zip)
+
         2. 进入解压目录下执行命令
         注：mac需要在设置与隐私中允许非 App store 应用运行，[详见FAQ](#faq)
         ```bash
@@ -61,18 +59,14 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
     </TabItem>
 
     <TabItem label="windows-lite">
-        1. 下载二进制文件
-        ```bash
-        https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/windows.zip
-        ```
+        1. 点击下载[部署程序]( https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/windows.zip)
+
         2. 进入解压目录下运行start_apps.bat文件
     </TabItem>
 
     <TabItem label="linux-lite">
-        1. 下载二进制文件
-        ```bash
-        https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/linux.zip
-        ```
+        1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/linux.zip)
+
         2. 进入解压目录下执行命令
         ```bash
         chmod +x ./start_apps.sh \
