--- a/src/content/docs/enterprises/trial-version.mdx
+++ b/src/content/docs/enterprises/trial-version.mdx
@@ -48,7 +48,7 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 
 
     <TabItem label="mac-lite">
-        1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/darwin.zip)
+        1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/mac.zip)
 
         2. 进入解压目录下执行命令
         注：mac需要在设置与隐私中允许非 App store 应用运行，[详见FAQ](#faq)
@@ -58,13 +58,13 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
     </TabItem>
 
     <TabItem label="windows-lite">
-        1. 点击下载[部署程序]( https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/windows.zip)
+        1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/windows.zip)
 
         2. 进入解压目录下运行start_apps.bat文件
     </TabItem>
 
     <TabItem label="linux-lite">
-        1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/linux.zip)
+        1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/linux.zip)
 
         2. 进入解压目录下执行命令
         ```bash
