docs: add docker-compose zip

--- a/src/content/docs/enterprises/trial-version.mdx
+++ b/src/content/docs/enterprises/trial-version.mdx
@@ -22,7 +22,7 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 ## 部署
 <Tabs>
     <TabItem label="docker-compose">
-        1. 克隆本仓库
+        1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/docker-compose.zip)
         ```bash
         git clone https://github.com/dream-num/helm-charts.git
         ```
@@ -68,7 +68,7 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 
         2. 进入解压目录下执行命令
         ```bash
-        chmod +x ./start_apps.sh &&./start_apps.sh
+        chmod +x ./start_apps.sh && ./start_apps.sh
         ```
     </TabItem>
 </Tabs>
@@ -143,7 +143,7 @@ univer端口见下表
     <TabItem label="linux-lite">
         进入目录下执行命令
         ```bash
-        chmod +x ./stop_apps.sh &&./stop_apps.sh
+        chmod +x ./stop_apps.sh && ./stop_apps.sh
         ```
     </TabItem>
 </Tabs>
