--- a/src/content/docs/enterprises/trial-version.mdx
+++ b/src/content/docs/enterprises/trial-version.mdx
@@ -2,8 +2,6 @@
 title: 试用商业版
 ---
 
-
-
 import {TabItem, Tabs} from "@astrojs/starlight/components";
 
 :::note
@@ -60,7 +58,7 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
     <TabItem label="windows-lite">
         1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/windows.zip)
 
-        2. 进入解压目录下运行start_apps.bat文件
+        2. 进入解压目录，运行 start_apps.bat 文件。请确保在运行过程中允许防火墙执行此程序。
     </TabItem>
 
     <TabItem label="linux-lite">
@@ -78,7 +76,11 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 打开浏览器输入 http://localhost:3010 后会自动创建空白文档并跳转到新文档链接（不支持IE浏览器）
 
 ![例子](./imgs/img1.png)
-注：本地可打开不同浏览器或使用无痕模式体验univer协同
+
+### 体验协同
+
+请尝试在不同类型浏览器或无痕模式下访问，以全面体验协同功能。
+
 ![例子](./imgs/img2.png)
 
 
