docs: modify enterprises

--- a/src/content/docs/enterprises/trial-version.mdx
+++ b/src/content/docs/enterprises/trial-version.mdx
@@ -21,10 +21,8 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 <Tabs>
     <TabItem label="docker-compose">
         1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/docker-compose.zip)
-        ```bash
-        git clone https://github.com/dream-num/helm-charts.git
-        ```
-        2. 进入 `docker-compose` 目录
+
+        2. 解压后进入 `docker-compose` 目录
         ```bash
         cd helm-charts/docker-compose
         ```
