--- a/src/content/docs/enterprises/trial-version.mdx
+++ b/src/content/docs/enterprises/trial-version.mdx
@@ -2,8 +2,6 @@
 title: 试用商业版
 ---
 
-
-
 import {TabItem, Tabs} from "@astrojs/starlight/components";
 
 :::note
@@ -22,11 +20,9 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 ## 部署
 <Tabs>
     <TabItem label="docker-compose">
-        1. 克隆本仓库
-        ```bash
-        git clone https://github.com/dream-num/helm-charts.git
-        ```
-        2. 进入 `docker-compose` 目录
+        1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/docker-compose.zip)
+
+        2. 解压后进入 `docker-compose` 目录
         ```bash
         cd helm-charts/docker-compose
         ```
@@ -60,7 +56,7 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
     <TabItem label="windows-lite">
         1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/windows.zip)
 
-        2. 进入解压目录下运行start_apps.bat文件
+        2. 进入解压目录，运行 start_apps.bat 文件。请确保在运行过程中允许防火墙执行此程序。
     </TabItem>
 
     <TabItem label="linux-lite">
@@ -68,7 +64,7 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 
         2. 进入解压目录下执行命令
         ```bash
-        chmod +x ./start_apps.sh &&./start_apps.sh
+        chmod +x ./start_apps.sh && ./start_apps.sh
         ```
     </TabItem>
 </Tabs>
@@ -78,7 +74,11 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 打开浏览器输入 http://localhost:3010 后会自动创建空白文档并跳转到新文档链接（不支持IE浏览器）
 
 ![例子](./imgs/img1.png)
-注：本地可打开不同浏览器或使用无痕模式体验univer协同
+
+### 体验协同
+
+请尝试在不同类型浏览器或无痕模式下访问，以全面体验协同功能。
+
 ![例子](./imgs/img2.png)
 
 
@@ -143,7 +143,7 @@ univer端口见下表
     <TabItem label="linux-lite">
         进入目录下执行命令
         ```bash
-        chmod +x ./stop_apps.sh &&./stop_apps.sh
+        chmod +x ./stop_apps.sh && ./stop_apps.sh
         ```
     </TabItem>
 </Tabs>
