--- a/src/content/docs/enterprises/index.mdx
+++ b/src/content/docs/enterprises/index.mdx
@@ -1,12 +1,8 @@
 ---
-title: 商业版介绍
+title: 功能介绍
 ---
 
-import QrCodeImg from "@/assets/img/business-qr-code.png";
-
-## 商业版功能
-
-我们为有**协同办公**、**数据连接器**、**Live Share** 等需求的用户提供了开箱即用的商业化服务。
+我们为有**协同办公**、**Live Share** 等需求的用户提供了开箱即用的服务。
 
 ### 协同办公
 
@@ -16,18 +12,7 @@ import QrCodeImg from "@/assets/img/business-qr-code.png";
 
 在和你的同事协同办公时进行演示，你的同事可以跟随你的视角实时查看你的操作，并可以随时暂停或继续跟随。
 
-### 数据连接器
-
-通过简单的配置就能将数据从其他系统（例如数据库、API、Google Sheet 等）导入到 Univer，在 Univer 串联你的全部数据。
-
 {/* copied from introduction.mdx */}
 
-## 获取商业版
-
-如果你需要商业授权，可以通过以下方式咨询：
-
-- [开发者邮箱 developer@univer.ai](mailto:developer@univer.ai)
-- 商务电话 +(86) 186 0163 9309
-- 添加企业微信
-
-<img src={QrCodeImg.src} width={300} alt="DreamNum QR Code" />
+### 获取社区版
+欢迎尝试我们的社区版！请[点击这里](/enterprises/trial-version)查看社区版使用指南，开始您的探索之旅。
