docs: fix trial-version

--- a/src/content/docs/enterprises/trial-version.mdx
+++ b/src/content/docs/enterprises/trial-version.mdx
@@ -23,9 +23,9 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 2. 内存: 2G
 3. 磁盘: 10G
 4. 系统:
-    - Linux Arm64
+    - Linux Amd64
     - Mac Apple silicon
-    - Windows Arm64 (仅支持lite版本部署)
+    - Windows Amd64 (仅支持lite版本部署)
 
 ## 部署
 <Tabs>
