--- a/src/content/docs/enterprises/trial-version.mdx
+++ b/src/content/docs/enterprises/trial-version.mdx
@@ -1,5 +1,5 @@
 ---
-title: 使用指南
+title: 部署指南
 ---
 
 import {TabItem, Tabs} from "@astrojs/starlight/components";
@@ -18,33 +18,32 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 
 我们提供了出色的技术指标，让您和您的团队可以在高效的协作环境中工作。
 
-## 环境要求
+## 配置要求
 1. CPU: 1 核
 2. 内存: 2G
 3. 磁盘: 10G
-4. 系统:
-    - Linux Amd64
-    - Mac Apple silicon
-    - Windows Amd64 (仅支持lite版本部署)
 
 ## 部署
 <Tabs>
     <TabItem label="docker-compose">
-        1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/docker-compose.zip)
+        系统环境：Linux、Mac、Windows/WSL。
 
-        2. 解压后进入 `docker-compose` 目录
+        1. 克隆本仓库。
+
+        ```bash
+        git clone https://github.com/dream-num/helm-charts.git
+        ```
+        或点击[此处](https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/docker-compose.zip)下载。
+
+        2. 解压后进入 `docker-compose` 目录。
         ```bash
         cd helm-charts/docker-compose
         ```
-        3. 启动后端服务
+        3. 启动后端服务。
         ```bash
         bash run.sh
         ```
-        4. 获取demo镜像
-        ```bash
-        docker pull univer-acr-registry.cn-shenzhen.cr.aliyuncs.com/release/univer-collaboration-demo:latest
-        ```
-        5. 启动前端demo
+        4. 启动前端demo。
         ```bash
         docker run --net=unvier-prod --rm --name univer-collaboration-demo \
         -p 3010:3010 univer-collaboration-demo:dev
@@ -52,27 +51,26 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 
     </TabItem>
 
-
-    <TabItem label="mac-lite">
-        1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/mac.zip)
-
-        2. 进入解压目录下执行命令
-        注：mac需要在设置与隐私中允许非 App store 应用运行，[详见FAQ](#faq)
-        ```bash
-        chmod +x ./start_apps.sh && ./start_apps.sh
-        ```
-    </TabItem>
-
     <TabItem label="windows-lite">
-        1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/windows.zip)
+        1. 点击[下载](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/windows.zip) Windows 10/11 x64版本。
 
         2. 进入解压目录，运行 start_apps.bat 文件。请确保在运行过程中允许防火墙执行此程序。
     </TabItem>
 
     <TabItem label="linux-lite">
-        1. 点击下载[部署程序](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/linux.zip)
+        1. 点击[下载](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/linux.zip) linux x64版本。
 
-        2. 进入解压目录下执行命令
+        2. 进入解压目录下执行命令。
+        ```bash
+        chmod +x ./start_apps.sh && ./start_apps.sh
+        ```
+    </TabItem>
+
+    <TabItem label="mac-lite">
+        1. 点击[下载](https://release-univer.oss-cn-shenzhen.aliyuncs.com/lite/mac.zip) Apple silicon版本。
+
+        2. 进入解压目录下执行命令。
+        注：mac需要在设置与隐私中允许非 App store 应用运行，[详见FAQ](#faq)。
         ```bash
         chmod +x ./start_apps.sh && ./start_apps.sh
         ```
@@ -81,7 +79,7 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 
 ## 使用
 
-打开浏览器输入 http://localhost:3010 后会自动创建空白文档并跳转到新文档链接（不支持IE浏览器）
+打开浏览器输入 http://localhost:3010 后会自动创建空白文档并跳转到新文档链接（不支持IE浏览器）。
 
 ![例子](./imgs/img1.png)
 
@@ -94,23 +92,23 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 
 ## FAQ
 ### 1. 如何分享到局域网协同
-替换 localhost 为本机ip，并分享给其它内网同事
+替换 localhost 为本机ip，并分享给其它内网同事。
 ```bash
 # 如 http://localhost:3010/?unit=17443300120626831361&type=2
 # 替换为 http://192.168.50.172:3010/?unit=17443300120626831361&type=2
 ```
 
 ### 2. mac运行文件失败
-打开系统设置设置-隐私与安全-安全性-点击仍然允许
+打开系统设置设置-隐私与安全-安全性-点击仍然允许。
 ![允许访问](./imgs/mac1.png)
 
 ### 3. 内网访问失败
-检查防火墙是否启用,若启用请确保局域网内univer的端口可被访问
+检查防火墙是否启用,若启用请确保局域网内univer的端口可被访问。
 
 ### 4. 服务启动失败
-检查端口是否被占用，若占用请结束其他进程后再尝试启动
+检查端口是否被占用，若占用请结束其他进程后再尝试启动。
 
-univer端口见下表
+univer端口见下表。
 <Tabs>
     <TabItem label="docker-compose">
         | service | port | description |
@@ -130,31 +128,31 @@ univer端口见下表
 ### 5. lite（社区精简版）和docker-compose（社区完整版）有什么分别？
 - 功能性：在功能上保持一致。
 - 支持系统：
-- lite：支持windows、linux、mac
-- docker-compose: 支持linux、mac
+- lite：支持windows、linux、mac。
+- docker-compose: 支持linux、mac。
 - 具体实现：
-- lite：SQLite + 内存队列
-- docker-compose: PostgreSQL + RabbitMQ
+- lite：SQLite + 内存队列。
+- docker-compose: PostgreSQL + RabbitMQ。
 
 ### 6. 针对lite版该如何正确停止服务
 <Tabs>
     <TabItem label="mac-lite">
-        进入目录下执行命令
+        进入目录下执行命令。
         ```bash
         chmod +x ./stop_apps.sh && ./stop_apps.sh
         ```
     </TabItem>
 
     <TabItem label="windows-lite">
-        进入目录下运行stop_apps.bat文件
+        进入目录下运行stop_apps.bat文件。
     </TabItem>
 
     <TabItem label="linux-lite">
-        进入目录下执行命令
+        进入目录下执行命令。
         ```bash
         chmod +x ./stop_apps.sh && ./stop_apps.sh
         ```
     </TabItem>
 </Tabs>
 
-若仍然不能解决您的问题，请[联系社区](/guides/introduction#社区)获取帮助
+若仍然不能解决您的问题，请[联系社区](/guides/introduction#社区)获取帮助。
