docs: update ot blog

--- a/src/content/blog/ot/zh-cn.mdx
+++ b/src/content/blog/ot/zh-cn.mdx
@@ -356,7 +356,11 @@ C 对于 `a` 的处理和 B 类似，不再赘述。
 
 ### 应对网络错误等复杂情形
 
-在整个协同编辑的过程中会大量使用网络，不可避免地会出现各种网络中断的情况（可能是网络本身出了问题，又或者在网络传输完成之间网页被用户关闭的），协同调度算法必须对这些意外做出应对。
+在整个协同编辑的过程中会大量使用网络，不可避免地会出现各种网络中断的情况（可能是网络本身出了问题，又或者在网络传输完成之前网页被用户关闭），协同调度算法必须对这些意外做出应对。
+
+:::note
+我们这里所说的“协同调度算法”指的是操作转换（transform）之外的部分。
+:::
 
 1. 客户端可能错过服务端广播的一些操作，造成本地版本号的落后。客户端如何感知这种情况？客户端有两种办法感知，第一种是在接收服务端的远程操作时，发现操作的 `revision` 比本地的版本号 1 要大；第二种是在发送操作给服务端时，服务端返回的 ACK 事件的 `revision` 比本地的版本号要大。这两种情况都说明了客户端错过了一些操作，此时客户端需要向服务端拉取这些操作，拉取操作的区间应该是本地版本号加一到 `revision` 减一（闭区间），这个拉取的行为叫做 fetch miss。在 fetch miss 期间，本地仍有可能发生操作，也有可能接收到更新的服务端操作，这些操作之间均需要进行操作转换。
 2. 客户端提交的操作的丢失了，客户端需要设置超时机制以在这种情形发生时重新发送操作。我们在此处回收上面的一处伏笔：注意此时发送的操作的 `baseRevision` 可能已经被修改过，这可以降低服务器需要进行的 transform 的次数。
@@ -371,7 +375,9 @@ C 对于 `a` 的处理和 B 类似，不再赘述。
 
 ### 冲突处理
 
-尽管我们希望所有的并发编辑都能够被协同算法完美处理，但在实际的生产环境中这几乎不可能做到，我们必须要在协同算法无法处理的情况下让用户自己来解决冲突。方法就是在发生冲突时切断协同编辑，同时保留冲突现场，让用户有机会来保存他们的编辑结果。
+尽管我们希望所有的并发编辑都能够被协同算法完美处理，但在实际的生产环境中这几乎不可能做到，我们必须要在协同算法无法处理的情况下让用户自己来解决冲突。例如 Alice 删除了一个子表，而同时 Bob 在这个子表上执行了一些操作，如果我们静默地将 Bob 的操作丢弃，那么 Bob 的这些编辑就会完全丢失，我们不希望这样的情形发生。解决方法就是在发生冲突时切断协同编辑，同时保留（Bob 的）冲突现场，让用户有机会来保存他们的编辑结果。
+
+好在这样的特殊情形是非常少见的，不会对用户的编辑体验造成太大的影响。
 
 ### 历史记录
 
