docs: add English ot blog

--- a/src/content/blog/ot/zh-cn.mdx
+++ b/src/content/blog/ot/zh-cn.mdx
@@ -5,8 +5,8 @@ tags:
   - Collaboration
   - OT
   - Architecture
-cover: ./0.png
-author: wzhudev
+cover: ./4.png
+author: Wenzhao Hu
 date: 2024-01-12
 lang: zh-cn
 slug: blog/ot
@@ -79,9 +79,13 @@ const insertCell = {
 
 定义了操作之后，用户的编辑行为都可以被操作所表示，执行编辑的行为即是在某个副本上应用操作的过程。
 
-PS：这里是伪代码，[Univer 所使用的结构](https://github.com/dream-num/univer/blob/dev/packages/sheets/src/commands/mutations/set-range-values.mutation.ts)比这要稍微复杂些。
+:::note
+这里是伪代码，[Univer 所使用的结构](https://github.com/dream-num/univer/blob/dev/packages/sheets/src/commands/mutations/set-range-values.mutation.ts)比这要稍微复杂些。
+:::
 
-PPS：实际往往会用[命令模式](https://en.wikipedia.org/wiki/Command_pattern)来实现操作。
+:::note
+实际往往会用[命令模式](https://en.wikipedia.org/wiki/Command_pattern)来实现操作。
+:::
 
 ### 操作的顺序和版本号
 
@@ -273,7 +277,7 @@ B 收到 `a` 之后，发现 `a` 的 `revision` 为 13，而 B 的版本号为 1
 由定义可以看出：`a` `b` 的 `baseRevision` 必须相同。
 :::
 
-在 B 的副本上，`a'` 的内容用伪代码描述应该是：
+回到我们的例子，在 B 的副本上，`a'` 的内容用伪代码描述应该是：
 
 ```ts
 const aPrime = {
@@ -309,7 +313,7 @@ C 对于 `a` 的处理和 B 类似，不再赘述。
 
 ![](./4.png)
 
-首先 b `baseRevision` 是 12，而此时服务端副本的版本号因为应用了 `a` 变为 13，因此服务端收到此操作之后，需要对 `a` `b` 进行得转换到 `b'` 再将 `b'` 应用在服务端的副本上，并给 `b'` 设置 `revision` 为 14。然后向 B 发送 ACK 事件，向 A C 广播 `b`。
+首先 b `baseRevision` 是 12，而此时服务端副本的版本号因为应用了 `a` 变为 13，因此服务端收到此操作之后，需要对 `a` `b` 进行得转换到 `b'` 再将 `b'` 应用在服务端的副本上，并给 `b'` 设置 `revision` 为 14。然后向 B 发送 ACK 事件，向 A C 广播 `b'`。
 
 :::note
 
@@ -337,6 +341,10 @@ C 对于 `a` 的处理和 B 类似，不再赘述。
 
 具体的操作转换方法，需要根据操作的类型来决定，任意两种操作都需要进行转换，另外操作可能要和同类型的另一个操作进行转换。如果原子操作的数量是 `n`，那么转换方法的量级就是 `O(n^2)`，因此，正确地实现操作转换是一个细活。不过也正是我们需要一个个地实现操作转换，我们才对转换过程中的意图保持有更强的控制力。
 
+:::note
+这些操作转换方法我们在 Univer 称之为 “transform 算法”。而之前提到的客户端和服务器如何对操作进行调度，以及后面提到的网络传输、离线缓存等等，我们统称为 “协同调度算法”。
+:::
+
 ## 真实场景中需要考虑的问题
 
 以上就是 OT 算法的基本原理，但是在实际的生产环境中，我们还需要考虑很多其他的问题。
@@ -357,10 +365,6 @@ C 对于 `a` 的处理和 B 类似，不再赘述。
 ### 应对网络错误等复杂情形
 
 在整个协同编辑的过程中会大量使用网络，不可避免地会出现各种网络中断的情况（可能是网络本身出了问题，又或者在网络传输完成之前网页被用户关闭），协同调度算法必须对这些意外做出应对。
-
-:::note
-我们这里所说的“协同调度算法”指的是操作转换（transform）之外的部分。
-:::
 
 1. 客户端可能错过服务端广播的一些操作，造成本地版本号的落后。客户端如何感知这种情况？客户端有两种办法感知，第一种是在接收服务端的远程操作时，发现操作的 `revision` 比本地的版本号 1 要大；第二种是在发送操作给服务端时，服务端返回的 ACK 事件的 `revision` 比本地的版本号要大。这两种情况都说明了客户端错过了一些操作，此时客户端需要向服务端拉取这些操作，拉取操作的区间应该是本地版本号加一到 `revision` 减一（闭区间），这个拉取的行为叫做 fetch miss。在 fetch miss 期间，本地仍有可能发生操作，也有可能接收到更新的服务端操作，这些操作之间均需要进行操作转换。
 2. 客户端提交的操作的丢失了，客户端需要设置超时机制以在这种情形发生时重新发送操作。我们在此处回收上面的一处伏笔：注意此时发送的操作的 `baseRevision` 可能已经被修改过，这可以降低服务器需要进行的 transform 的次数。
