docs: tweet as link

--- a/src/content/blog/ot/en-us.mdx
+++ b/src/content/blog/ot/en-us.mdx
@@ -457,7 +457,7 @@ This article discussed four main topics: the need for collaborative editing, the
 
 Collaborative editing is a complex field that represents the collective wisdom of [numerous](https://github.com/Operational-Transformation/ot.js/) [engineers](https://github.com/share/sharedb) and [researchers](https://github.com/ether/etherpad-lite/tree/develop/doc/easysync). However, collaborative editing is also intriguing as it brings a new experience to users and enhances collaboration efficiency.
 
-We hope that this article has helped you gain a better understanding of collaborative editing. If you have any questions, we welcome you to discuss them with us in the comments.
+We hope that this article has helped you gain a better understanding of collaborative editing. If you have any questions, we welcome you to discuss them with us under the Tweet.
 
 ## Appendix: Why Univer Doesn't Use CRDT?
 
