--- a/src/content/blog/ot/zh-cn.mdx
+++ b/src/content/blog/ot/zh-cn.mdx
@@ -395,7 +395,19 @@ C 对于 `a` 的处理和 B 类似，不再赘述。
 
 ## Univer 协同编辑研发实践
 
-在开发 Univer 协同编辑模块时，我们做了一些有趣的设计，这里分享给大家。
+### 整体架构
+
+![](./8.png)
+
+最后我们想介绍一下 Univer 协同编辑模块的整体架构，客户端架构图如上所示。这个架构有如下要点：
+
+- 实现了三个插件 `@univerjs-pro/collaboration` / `@univerjs-pro/collaboration-client` `@univerjs-pro/collaboration-server` 分别负责两端共用的代码，以及客户端和服务端各自的代码，并实现客户端和服务端的同构。
+- 对于每个文档的 model，都有一组 `CollaborationEntity` 和 `CollaborationSession` 与之对应，前者负责该文档的协同调度，后者负责协同模块和服务端的网络连接。这样可以支持一个页面上同时有多个相同或不同类型的文档同时协同。
+- `CollaborationEntity` 监听在其对应文档上发生的编辑 mutations（mutations 就是 Univer 当中的 operations），然后将这些 mutation 发往服务端协同。服务端同步过来的其他客户端的操作也会转换为 mutations 并在 transform 之后执行。
+- `CollaborationEntity` 持有一个状态机，它负责管理客户端的协同调度。
+- 我们抽象了一个网络层 NetworkInterface，它负责在客户端和服务端之间建立连接通讯。
+
+接下来我们详细说明一下其中的几个要点。
 
 ### 使用插件形式构建协同编辑
 
@@ -429,7 +441,7 @@ export class CollaborationClientPlugin extends Plugin {
 
 ### 文档类型无关的协同调度算法
 
-Univer 无界文档的理念要求在同一个无界空间中可以混合使用多种文档类型，例如在同一个无界空间中可以混合使用电子表格、文档、幻灯片等等。这就要求协同调度算法不能依赖于文档类型的特性，例如电子表格的行列结构，而是要能够适用于任何文档类型。我们实现了一个文档类型无关的协同调度算法，协同调度算法会处理网络连接、历史记录、离线编辑等等问题，各种类型文档接入协同编辑时需要做的是设计操作的数据结构以及实现操作转换算法，这样就大大降低了不同类型文档协同编辑的开发难度。
+Univer 无界文档的理念要求在同一个无界空间中可以混合使用多种文档类型，例如在同一个无界空间中可以混合使用电子表格、文档、幻灯片等等。这就要求协同调度算法不能依赖于文档类型的特性，例如电子表格的行列结构，而是要能够适用于任何文档类型。我们实现了一个文档类型无关的协同调度算法，协同调度算法会处理网络连接、历史记录、离线编辑等等问题。在架构图上有一个 `TransformService`，不同类型的文档可以通过这个 service 提供的 API 注册 transform 方法以快速接入协同编辑，这样就大大降低了不同类型文档协同编辑的开发难度。
 
 ### 基于状态机的协同调度算法
 
