--- a/src/content/docs/en-us/guides/quick-start/index.mdx
+++ b/src/content/docs/en-us/guides/quick-start/index.mdx
@@ -17,43 +17,19 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
 <Tabs>
   <TabItem label="npm">
     ```shell
-    npm install @univerjs/core \
-        @univerjs/design \
-        @univerjs/docs \
-        @univerjs/engine-formula \
-        @univerjs/engine-render \
-        @univerjs/sheets \
-        @univerjs/sheets-formula \
-        @univerjs/sheets-ui \
-        @univerjs/ui
+    npm install @univerjs/core @univerjs/design @univerjs/docs @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
     ```
   </TabItem>
 
   <TabItem label="yarn">
-    ```shell 
-    yarn install @univerjs/core \ 
-        @univerjs/design \ 
-        @univerjs/docs \
-        @univerjs/engine-formula \ 
-        @univerjs/engine-render \ 
-        @univerjs/sheets \
-        @univerjs/sheets-formula \ 
-        @univerjs/sheets-ui \ 
-        @univerjs/ui 
+    ```shell
+    yarn add install @univerjs/core @univerjs/design @univerjs/docs @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
     ```
   </TabItem>
 
   <TabItem label="pnpm">
     ```shell
-    pnpm install @univerjs/core \
-        @univerjs/design \
-        @univerjs/docs \
-        @univerjs/engine-formula \
-        @univerjs/engine-render \
-        @univerjs/sheets \
-        @univerjs/sheets-formula \
-        @univerjs/sheets-ui \
-        @univerjs/ui
+    pnpm add install @univerjs/core @univerjs/design @univerjs/docs @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
     ```
   </TabItem>
 </Tabs>
